# plover

./: .gitignore  AGENTS.md  BOM-3v3.md  BOM.md  Cargo.toml  Makefile  README.md  plover-whitepaper.md
.cargo/: config.toml
archive/: MANIFEST.md  README.md  pack-bundles.ps1
basic/: tokenize.py
cpld/: README.md
crates/: README.md
crates/plover_os/: Cargo.toml
crates/plover_os/src/: drives.rs  kernel.rs  kernel_scenario.rs  lib.rs  plfs.rs  plr.rs  runtime.rs  shell.rs  spawn.rs  toolchain.rs  vfdd.rs
crates/plover_presenter/: Cargo.toml
crates/plover_presenter/src/: audio.rs  compose.rs  font8x8.rs  headless.rs  hid_bridge.rs  lib.rs  sdl_window.rs
crates/plover_presenter/tests/: headless_compose.rs  png_golden.rs
crates/plover_scenario/: Cargo.toml
crates/plover_scenario/src/: generic.rs  lib.rs
crates/plover_vm/: Cargo.toml
crates/plover_vm/src/: demo.rs  main.rs
crates/plover_vm/tests/: media_bench_play.rs
cyclesim/: README.md  __init__.py  __main__.py  cli.py  engine.py  micro_driver.py  runner.py  trace.py
docs/: Gemini-_22.md  Gemini-_38.md  README.md  alu-opcodes-timing.md  alu8-phase-b.md  audio-apu.md  baremetal-gpio-smoke.md  bom-maintenance.md  boot-jmp-handoff.md  bootloader.md  cpld-system-controller.md  cyclesim.md  device-discovery.md  display-console.md  dos-shell.md  forth-os-services.md  forth-system.md  fpga-target-guide.md  hardware-architecture-synthesis.md  hw-bringup-alu8-assembly-spec.md  hw-bringup-b3-opcode.md  hw-bringup-b3.md  hw-bringup-cpld-programming.md  hw-bringup-gpr-alu.md  hw-bringup-p1-datapath.md  hw-bringup-p2-rom.md  hw-bringup-p3-ctrl-pc.md  hw-schematic.md  hw-sim.md  hw-viewer-p1.md  implementation-plan-v0.1.md  input-hid.md  mailbox-protocol.md  memory-map.md  microcode-spec-v0.2.md  microcode-spec.md  os-kernel.md  pl-dos-roadmap.md  plover-asm.md  plover-fat.md  (+14 more)
forth/: interpreter.py
hw/: README.md  __init__.py
hwsim/: README.md  __init__.py  __main__.py  cli.py  export_control_gate_graph.py  export_gate_graph.py  export_gate_schematic.py  export_schematic.py  export_svg.py  kicad_diff.py  netlist.py  pinout.py  report.py  scenario.py  scheduler.py  serve.py  simulator.py  yaml_util.py
inventory/: README.md  parts-on-hand.md  purchase-2026-06-01-followup.md  purchase-2026-07-aliexpress.md  purchase-2026-07-devicesmart.md  purchase-devicesmart.md
kern/: __init__.py  audio.py  drives.py  gpio.py  input.py  kernel.py  plfs.py  plr.py  serial.py  spawn.py  vfdd.py  video.py
lib/: README.md  inc_r1.micro
plover_asm/: __init__.py  __main__.py  assemble.py  emit.py  lexer.py  opcodes.py
plover_cc/: __init__.py  __main__.py  codegen.py  parse.py
plover_ld/: README.md  __init__.py  __main__.py  format.py  linker.py
plover_vm/: README.md  __init__.py  __main__.py  alu.py  alu16.py  apu_scenario.py  boot_handoff.py  cli.py  decode.py  dos_scenario.py  forth_scenario.py  hid_scenario.py  kernel_scenario.py  loader.py  machine.py  trace.py  vdu_scenario.py
(+1199 files in other folders)
