[package]
name = "plover_os"
version.workspace = true
edition.workspace = true

[dependencies]
plover_mmu = { path = "../plover_mmu" }
plover_core = { path = "../plover_core" }
plover_copro = { path = "../plover_copro" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
