[package]
name = "plover_vm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "plover_vm"
path = "src/main.rs"

[features]
default = []
sdl = ["plover_presenter/sdl"]
audio = ["plover_presenter/audio"]

[dependencies]
plover_mmu = { path = "../plover_mmu" }
plover_core = { path = "../plover_core" }
plover_copro = { path = "../plover_copro" }
plover_presenter = { path = "../plover_presenter" }
plover_scenario = { path = "../plover_scenario" }
plover_os = { path = "../plover_os" }
plover_basic = { path = "../plover_basic" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
plover_core = { path = "../plover_core" }
plover_scenario = { path = "../plover_scenario" }
